fix cutoff content from div

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,9 @@ main {
   height: 83vh;
 }
 
+.scrollableContainer {
+  height: 100%;
+  margin-bottom: 12px;
+}
+
+
